added images. need to fix player attack

--- a/Level_3_streetFighterGerold_JiaminZeng.html
+++ b/Level_3_streetFighterGerold_JiaminZeng.html
@@ -4,10 +4,11 @@
     <title>STREET FIGHTER: THE RISE OF GEROLD</title>
     <link rel = "stylesheet" href = "css sheet.css" />
     <body onload = "initialize();">
+        <h1 id = "fightName">COMMENCE!</h1>
         <div id = "playerStatBox", class = "statsBox">PLAYER STATS:</div>
         <div id = "enemyStatBox", class = "statsBox" style = "right: 0">ENEMY STATS:</div>
-        <img id = "pImage", src = "gerold_0.jpg">
-        <img id = "eImage", src = "placeholder.jpg">
+        <img id = "pImage">
+        <img id = "eImage">
         <hr />
         <div></div>
         <button id = "atkButton">ATTACK!</button>
