--- a/Level_3_streetFighterGerold_JiaminZeng.html
+++ b/Level_3_streetFighterGerold_JiaminZeng.html
@@ -4,15 +4,16 @@
     <title>STREET FIGHTER: THE RISE OF GEROLD</title>
     <link rel = "stylesheet" href = "css sheet.css" />
     <body onload = "initialize();">
-        <h1 id = "fightName">COMMENCE!</h1>
+        <h1>COMMENCE!</h1>
         <div id = "playerStatBox", class = "statsBox">PLAYER STATS:</div>
-        <div id = "enemyStatBox", class = "statsBox" style = "right: 0">ENEMY STATS:</div>
+        <div id = "enemyStatBox", class = "statsBox">ENEMY STATS:</div>
         <img id = "pImage">
         <img id = "eImage">
         <hr />
         <div></div>
         <button id = "atkButton">ATTACK!</button>
         <button id = "defButton">DEFEND!</button>
+        <div class = "scroll", id = "dialogueBox">...</div>
         <div class = "scroll", id = "outputBox">Attack or defend?</div>
         <hr />
         <button id = "resetButton">RESET GAME!</button>
