--- a/streetFighterGerold_JiaminZeng.html
+++ b/streetFighterGerold_JiaminZeng.html
@@ -5,8 +5,18 @@
     <link rel = "stylesheet" href = "css sheet.css" />
     <body onload = "initialize();">
         <h1>COMMENCE!</h1>
-        <div id = "playerStatBox", class = "statsBox">PLAYER STATS:</div>
-        <div id = "enemyStatBox", class = "statsBox">ENEMY STATS:</div>
+        <div class = "statsBox">PLAYER STATS:
+            <span id = "pStr"></span>
+            <span id = "pDex"></span>
+            <span id = "pSpd"></span>
+            <span id = "pVit"></span>
+        </div>
+        <div class = "statsBox">ENEMY STATS:
+            <span id = "eStr"></span>
+            <span id = "eDex"></span>
+            <span id = "eSpd"></span>
+            <span id = "eVit"></span>
+        </div>
         <img id = "pImage">
         <img id = "eImage">
         <hr />
